# ame-juce

./: .gitignore  .gitmodules  CMakeLists.txt  README.adoc  README.md  ame-juce.jucer
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
WavetableOscillator/: CMakeLists.txt
WavetableOscillator/src/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
WhiteNoise/: CMakeLists.txt
WhiteNoise/src/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
src/: PluginProcessor.cpp  PluginProcessor.h
